# py-Proffesionals-2026

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: dataset_mpiigaze_preprocessing.md  requirements.md  requirements.xlsx
gaze_tracker/: __init__.py  __main__.py  api.py  calibration.py  service.py  types.py
gaze_tracker/datasets/: __init__.py  mpiigaze_preprocess.py
gaze_tracker/detectors/: __init__.py  yunet.py
gaze_tracker/utils/: __init__.py  download.py
gaze_tracker/vision/: __init__.py  pupil.py
gaze_tracker/web/: index.html
gaze_tracker/web/static/: app.js  styles.css
notebooks/: 01_quickstart_ru.ipynb  02_mpiigaze_preprocessing_ru.ipynb
