[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gaze-tracker"
version = "0.1.0"
description = "Local gaze tracker (YuNet + pupil + calibration) with API + Web UI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy==2.4.2",
  "opencv-python==4.13.0.92",
  "fastapi==0.129.0",
  "uvicorn==0.40.0",
  "python-multipart==0.0.22",
]

[project.scripts]
gaze-tracker = "gaze_tracker.api:cli"
gaze-mpiigaze-preprocess = "gaze_tracker.datasets.mpiigaze_preprocess:cli"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
gaze_tracker = ["web/*.html", "web/static/*.css", "web/static/*.js"]
